demo/jenkins/source/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ci-ingress
spec:
  rules:
    - host: jenkins.k8s.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-http
                port:
                  number: 8080
